--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,10 @@ button {
   margin-top: 30px;
   border-radius: 30px;
   padding: 15px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
   transition: 300ms ease all;
 }
 
