--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,17 @@ textarea::placeholder {
   height: auto;
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+  max-width: 300px;
+}
+
+img#logo {
+  width: 300px;
+  height: 80px;
 }
 
 h1 {
-  margin: 0px;
-  margin-bottom: 30px;
+  margin: 30px 0px;
+  color: var(--brand-green);
 }
 
 textarea {
@@ -65,6 +71,10 @@ button {
 button:hover {
   background-color: #9bae51;
   color: var(--brand-blue);
+}
+
+button img {
+  width: 25px;
 }
 
 .result {
